force-app/main/default/objects/Beat_Outlet__c/Beat_Outlet__c.object-meta.xml
<CustomObject>
    <description>Junction between Beat and Outlet (Account) with visit sequencing.</description>
    <label>Beat Outlet</label>
    <nameField>
        <label>Beat Outlet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Beat Outlets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>