force-app/main/default/objects/Beat_Outlet__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outlet</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Beat Outlet Links</relationshipLabel>
    <relationshipName>Beat_Outlet_Links</relationshipName>
    <type>Lookup</type>
</CustomField>