force-app/main/default/objects/Beat_Outlet__c/fields/Beat__c.field-meta.xml
<CustomField>
    <fullName>Beat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beat</label>
    <referenceTo>Beat__c</referenceTo>
    <relationshipLabel>Beat Outlets</relationshipLabel>
    <relationshipName>Beat_Outlets</relationshipName>
    <type>Lookup</type>
</CustomField>