force-app/main/default/objects/Beat_Outlet__c/fields/Visit_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Visit_Sequence__c</fullName>
    <label>Visit Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>